--- a/hr-web/src/main/resources/application.properties
+++ b/hr-web/src/main/resources/application.properties
@@ -7,4 +7,15 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hr?useUnicode=true&characterEn
 
 logging.level.com.zhengjian.hr.mapper=debug
 
+spring.activemq.broker-url=tcp://127.0.0.1:61616
+spring.activemq.packages.trust-all=true
+spring.activemq.user=admin
+spring.activemq.password=admin
+
+#\u672A\u4F7F\u7528rabbitmq
+#spring.rabbitmq.host=127.0.0.1
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+
 spring.cache.cache-names=cache_menus
