--- a/hr-web/src/main/resources/application.properties
+++ b/hr-web/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.activemq.password=admin
 #spring.rabbitmq.password=guest
 
 spring.cache.cache-names=cache_menus
+
+#spring.redis.host=192.168.71.62
+#spring.redis.port=6379
+#spring.redis.database=0
+#spring.redis.password=000000
