--- a/hr-mail/src/main/resources/application.properties
+++ b/hr-mail/src/main/resources/application.properties
@@ -1,22 +1,29 @@
 server.port=8082
 
-#\u90AE\u4EF6\u670D\u52A1\u914D\u7F6E
+# \u90AE\u4EF6\u670D\u52A1\u914D\u7F6E
+# SMTP \u670D\u52A1\u5668\u5730\u5740
 spring.mail.host=smtp.qq.com
+# SMTP \u670D\u52A1\u5668\u7684\u7AEF\u53E3
 spring.mail.port=587
-spring.mail.username=454407628@qq.com
-#\u90AE\u7BB1\u5F00\u901APOP3/SMTP\u670D\u52A1\u65F6\u6240\u7ED9\u7684\u6388\u6743\u7801
-spring.mail.password=voeswedefedvcaha
+# \u90AE\u7BB1\u7528\u6237\u540D
+spring.mail.username=799737179@qq.com
+# \u90AE\u7BB1\u5F00\u901A POP3/SMTP \u670D\u52A1\u65F6\u6240\u7ED9\u7684\u6388\u6743\u7801\uFF0C\u6362\u6210\u81EA\u5DF1\u7533\u8BF7\u7684
+spring.mail.password=voeswedefedvcahabc
+# \u9ED8\u8BA4\u7684\u90AE\u4EF6\u7F16\u7801
 spring.mail.default-encoding=UTF-8
+# SSL \u52A0\u5BC6\u5DE5\u5382
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+# \u5F00\u542F DEBUG \u6A21\u5F0F\uFF0C\u90AE\u4EF6\u53D1\u9001\u8FC7\u7A0B\u7684\u65E5\u5FD7\u4F1A\u5728\u63A7\u5236\u53F0\u6253\u5370\u51FA\u6765\uFF0C\u65B9\u4FBF\u6392\u67E5\u9519\u8BEF
 spring.mail.properties.mail.debug=true
 
+# \u914D\u7F6E ActiveMQ
 spring.activemq.broker-url=tcp://127.0.0.1:61616
 spring.activemq.packages.trust-all=true
 spring.activemq.user=admin
 spring.activemq.password=admin
 
-#\u672A\u4F7F\u7528rabbitmq
-#spring.rabbitmq.host=127.0.0.1
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+# \u672A\u4F7F\u7528 RabbitMQ
+# spring.rabbitmq.host=127.0.0.1
+# spring.rabbitmq.port=5672
+# spring.rabbitmq.username=guest
+# spring.rabbitmq.password=guest
