--- a/hr-web/src/main/resources/application.properties
+++ b/hr-web/src/main/resources/application.properties
@@ -7,20 +7,22 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hr?useUnicode=true&characterEn
 
 logging.level.com.zhengjian.hr.mapper=debug
 
+# \u914D\u7F6E ActiveMQ
 spring.activemq.broker-url=tcp://127.0.0.1:61616
 spring.activemq.packages.trust-all=true
 spring.activemq.user=admin
 spring.activemq.password=admin
 
-#\u672A\u4F7F\u7528rabbitmq
-#spring.rabbitmq.host=127.0.0.1
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
+# \u672A\u4F7F\u7528 RabbitMQ
+# spring.rabbitmq.host=127.0.0.1
+# spring.rabbitmq.port=5672
+# spring.rabbitmq.username=guest
+# spring.rabbitmq.password=guest
 
 spring.cache.cache-names=cache_menus
 
-#spring.redis.host=192.168.71.62
-#spring.redis.port=6379
-#spring.redis.database=0
-#spring.redis.password=000000
+# \u914D\u7F6E Redis
+# spring.redis.host=192.168.71.62
+# spring.redis.port=6379
+# spring.redis.database=0
+# spring.redis.password=000000
