--- a/hr-web/src/main/resources/application.properties
+++ b/hr-web/src/main/resources/application.properties
@@ -19,9 +19,10 @@ spring.activemq.password=admin
 # spring.rabbitmq.username=guest
 # spring.rabbitmq.password=guest
 
+# \u83DC\u5355\u7F13\u5B58
 spring.cache.cache-names=cache_menus
 
-# \u914D\u7F6E Redis
+# \u914D\u7F6E Redis \uFF0C\u7ED3\u5408 Spring Cache \u5B9E\u73B0\u83DC\u5355\u7F13\u5B58\uFF08\u9ED8\u8BA4\u6CE8\u91CA\u6389\u4E86\uFF09\uFF0C\u89C1 MenuService
 # spring.redis.host=192.168.71.62
 # spring.redis.port=6379
 # spring.redis.database=0
