--- a/hr-web/src/main/resources/application.properties
+++ b/hr-web/src/main/resources/application.properties
@@ -7,23 +7,27 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hr?useUnicode=true&characterEn
 
 logging.level.com.zhengjian.hr.mapper=debug
 
-# \u914D\u7F6E ActiveMQ
-spring.activemq.broker-url=tcp://127.0.0.1:61616
-spring.activemq.packages.trust-all=true
-spring.activemq.user=admin
-spring.activemq.password=admin
+# \u914D\u7F6E ActiveMQ\uFF08\u672A\u4F7F\u7528\uFF09
+# spring.activemq.broker-url=tcp://127.0.0.1:61616
+# spring.activemq.packages.trust-all=true
+# spring.activemq.user=admin
+# spring.activemq.password=admin
 
-# \u672A\u4F7F\u7528 RabbitMQ
-# spring.rabbitmq.host=127.0.0.1
-# spring.rabbitmq.port=5672
-# spring.rabbitmq.username=guest
-# spring.rabbitmq.password=guest
+# \u914D\u7F6E RabbitMQ
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+## \u5F00\u542F confirm \u56DE\u8C03
+spring.rabbitmq.publisher-confirms=true
+## \u5F00\u542F return \u56DE\u8C03
+spring.rabbitmq.publisher-returns=true
 
 # \u83DC\u5355\u7F13\u5B58
 spring.cache.cache-names=cache_menus
 
 # \u914D\u7F6E Redis \uFF0C\u7ED3\u5408 Spring Cache \u5B9E\u73B0\u83DC\u5355\u7F13\u5B58\uFF08\u9ED8\u8BA4\u6CE8\u91CA\u6389\u4E86\uFF09\uFF0C\u89C1 MenuService
-# spring.redis.host=192.168.71.62
+# spring.redis.host=127.0.0.1
 # spring.redis.port=6379
 # spring.redis.database=0
-# spring.redis.password=000000
+# spring.redis.password=
